// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Danger 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c4 {
  margin-right: auto;
}

.c1 {
  background-color: #fae6ea;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #cc1439;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-right: 8px;
  color: #cc1439;
  min-width: 24px;
}

.c2 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="red"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c4"
      >
        Danger alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Informative 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-right: auto;
}

.c1 {
  background-color: #e1ebfa;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #216beb;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <div
        className="c3"
      >
        Informative alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Success 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c4 {
  margin-right: auto;
}

.c1 {
  background-color: #e9f7f2;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #008059;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-right: 8px;
  color: #008059;
  min-width: 24px;
}

.c2 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="green"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="check"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <div
        className="c4"
      >
        Success alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Warning 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-right: auto;
}

.c1 {
  background-color: #fcf5e3;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #ffbb00;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <div
        className="c3"
      >
        Warning alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a close button 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-right: auto;
}

.c1 {
  background-color: #e1ebfa;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #216beb;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  color: currentColor;
  min-width: 16;
}

.c5 {
  color: #434d59;
  font-size: 16px;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:hover {
  cursor: pointer;
  color: #216beb;
}

.c2 .c4 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <div
        className="c3"
      >
        Warning alert
      </div>
      <div
        className=""
      >
        <button
          aria-label="Close"
          className="c4 c5"
          color="darkGrey"
          fontSize="medium"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="c6"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="16"
            icon="close"
            size="16"
            title={null}
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a link 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-right: auto;
}

.c1 {
  background-color: #e1ebfa;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #216beb;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:hover {
  cursor: pointer;
  color: #1254c7;
}

.c2 .c4 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <div
        className="c3"
      >
        An alert with 
        <a
          className="c4 c5"
          color="blue"
          fontSize="medium"
          href="/"
        >
          linked details
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a title 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c4 {
  margin-right: auto;
}

.c1 {
  background-color: #fae6ea;
  padding: 16px;
  border-radius: 4px;
  border-left-width: half;
  border-left-color: #cc1439;
  border-left-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-right: 8px;
  color: #cc1439;
  min-width: 24px;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 .Link-sc-1lpx3d0-0 {
  color: #011e38;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
      role="alert"
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="red"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c4"
      >
        <p
          className="c5"
          color="currentColor"
          disabled={false}
          fontSize="medium"
          fontWeight="bold"
        >
          Danger title!
        </p>
        Danger alert
      </div>
    </div>
  </div>
</div>
`;
